@@ -1,3 +1,8 @@
+2008-02-23	Marzo Sette Torres Junior <marzojr@yahoo.com>
+	* Fixed palette rotation bug on portraits by making them all translucent.
+	* Fixed crash on SI when BG Paperdolls are turned off and a character's gump
+	  is opened. Switched shape data to load after game flx is laded.
+
 2008-02-18	Marzo Sette Torres Junior <marzojr@yahoo.com>
 	UCC: Improved handling of structs. Added a manner of specifying the integer
 	size of enums with the (optional) constructs
